# SSCO

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  example.cpp
include/: ssco.hpp
include/SSCO/: StupidSimpleCPPOpts.h
lib/: ssco.cpp
